source/blender/editors/space_clip/space_clip.cc
@@ -770,8 +770,9 @@ static void clip_main_region_draw(const bContext *C, ARegion *region)
     /* draw Grease Pencil - screen space only */
     clip_draw_grease_pencil((bContext *)C, false);
   }
-
-  WM_gizmomap_draw(region->gizmo_map, C, WM_GIZMOMAP_DRAWSTEP_2D);
+  if ((sc->gizmo_flag & SCLIP_GIZMO_HIDE) == 0) {
+    WM_gizmomap_draw(region->gizmo_map, C, WM_GIZMOMAP_DRAWSTEP_2D);
+  }
 }
 
 static void clip_main_region_listener(const wmRegionListenerParams *params)
